crates/swc_ts_fast_strip/tests/errors/type-assertions.ts


const foo = <number>1;